Update package dependencies and contact webpage.

--- a/contact.html
+++ b/contact.html
@@ -1,80 +1,78 @@
 <div xmlns:i18n="http://exist-db.org/xquery/i18n" data-template="templates:surround" data-template-with="templates/template_basic.html" data-template-at="content">
-    <div data-template="i18n:translate" data-template-catalogues="data/i18n">
-        <div class="container">
-            <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
-                <span class="text-muted">
-                    <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
-                </span>
-                <hr/>
-            </h2>
-            <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
-                <span class="text-muted">
-                    <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
-                </span>
-                <hr/>
-            </h2>
-            <h2 class="hidden-lg hidden-md">
-                <span class="text-muted">
-                    <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
-                </span>
-                <hr/>
-            </h2>
-            <div class="row">
-                <div class="col-md-3"/>
-                <div class="col-md-6">
-                    <p class="lead text-center">
-                        <i18n:text key="happyness">Wir freuen uns über Ihr Interesse an unserem Projekt. Alle Anfragen beantworten wir gern unter:</i18n:text>
-                        <br/>
-                        <span data-template="app:contactEMailHTML"/>
-                    </p>
-                </div>
-                <div class="col-md-3"/>
+    <div class="container">
+        <h2 style="margin-top: 3%" class="hidden-md hidden-sm hidden-xs">
+            <span class="text-muted">
+                <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
+            </span>
+            <hr/>
+        </h2>
+        <h2 style="margin-top: 2%" class="hidden-lg hidden-sm hidden-xs">
+            <span class="text-muted">
+                <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
+            </span>
+            <hr/>
+        </h2>
+        <h2 class="hidden-lg hidden-md">
+            <span class="text-muted">
+                <span class="icon-envelope-o" aria-hidden="true"/>  <i18n:text key="contact">Kontakt</i18n:text>
+            </span>
+            <hr/>
+        </h2>
+        <div class="row">
+            <div class="col-md-3"/>
+            <div class="col-md-6">
+                <p class="lead text-center">
+                    <i18n:text key="happyness">Wir freuen uns über Ihr Interesse an unserem Projekt. Alle Anfragen beantworten wir gern unter:</i18n:text>
+                    <br/>
+                    <span data-template="app:contactEMailHTML"/>
+                </p>
             </div>
+            <div class="col-md-3"/>
+        </div>
+        <br/>
+        <div class="row text-center">
+            <img class="img-rounded" alt="SvSal-Logo" src="resources/img/slider/SvSal-Logo.png"/>
+        </div>
+        <hr class="half-rule"/>
+        <div class="row">
+            <div class="col-sm-12 col-md-4">
+                <h2 class="text-center">
+                    <span>ADW Mainz</span>
+                </h2>
+                <p class="bigger text-center">
+                    Akademie der Wissenschaften<br/> 
+                    und der Literatur | Mainz<br/>
+                    Geschwister-Scholl-Str. 2<br/> 
+                    55131 Mainz
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <h2 class="text-center">
+                    <span>Goethe-Universität</span>
+                </h2>
+                <p class="bigger text-center">
+                    Institut für Philosophie<br/>
+                    Goethe-Universität<br/>
+                    Norbert-Wollheim-Platz 1<br/> 
+                    60629 Frankfurt am Main
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <h2 class="text-center">
+                    <span>Max-Planck-Institut</span>
+                </h2>
+                <p class="bigger text-center">
+                    Max-Planck-Institut<br/>
+                    für Rechtsgeschichte und Rechtstheorie<br/> 
+                    Postfach 50 07 01<br/> 
+                    60395 Frankfurt am  Main
+                </p>
+            </div>
+        </div>
+        <div>
+            <h2/>
+            <p> </p>
             <br/>
-            <div class="row text-center">
-                <img class="img-rounded" alt="SvSal-Logo" src="resources/img/slider/SvSal-Logo.png"/>
-            </div>
-            <hr class="half-rule"/>
-            <div class="row">
-                <div class="col-sm-12 col-md-4">
-                    <h2 class="text-center">
-                        <span>ADW Mainz</span>
-                    </h2>
-                    <p class="bigger text-center">
-                        Akademie der Wissenschaften<br/> 
-                        und der Literatur | Mainz<br/>
-                        Geschwister-Scholl-Str. 2<br/> 
-                        55131 Mainz
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <h2 class="text-center">
-                        <span>Goethe-Universität</span>
-                    </h2>
-                    <p class="bigger text-center">
-                        Institut für Philosophie<br/>
-                        Goethe-Universität<br/>
-                        Grüneburgplatz 1<br/> 
-                        60629 Frankfurt am Main
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <h2 class="text-center">
-                        <span>Max-Planck-Institut</span>
-                    </h2>
-                    <p class="bigger text-center">
-                        Max-Planck-Institut<br/>
-                        für europäische Rechtsgeschichte<br/> 
-                        Postfach 50 07 01<br/> 
-                        60395 Frankfurt am  Main
-                    </p>
-                </div>
-            </div>
-            <div>
-                <h2/>
-                <p> </p>
-                <br/>
-            </div>
         </div>
     </div>
 </div>
