Add caddy export changes.

--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
             <!--        <p><a href="admin-svn.html">SVN Functions</a>.</p> -->
         </div>
         
-        <div class="row" data-template="app:loadListOfWorks" data-template-sort="wid">
+        <div class="row" data-template="admin:loadListOfWorks" data-template-sort="wid">
             <h2>Works</h2>
             <p>
                 <span data-template="app:workCount">0</span> works found.
