--- a/createLists.html
+++ b/createLists.html
@@ -25,7 +25,17 @@
                 </div>
             </div>
             <div class="col-md-6">
+                <div data-template="admin:exportFileWRK">
+                    Booo! Something went wrong!
+                </div>
+            </div>
+            <div class="col-md-6">
                 <div data-template="admin:saveFileWRKnoJs">
+                    Booo! Something went wrong!
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div data-template="admin:exportFileWRKnoJs">
                     Booo! Something went wrong!
                 </div>
             </div>
