--- a/createLists.html
+++ b/createLists.html
@@ -20,24 +20,35 @@
         </h2>
         <div class="row">
             <div class="col-md-6">
-                <div data-template="admin:saveFileWRK">
+                <div data-template="admin:buildFacets">
                     Booo! Something went wrong!
                 </div>
             </div>
             <div class="col-md-6">
-                <div data-template="admin:exportFileWRK">
+                <div data-template="admin:buildFacetsNoJs">
+                    Booo! Something went wrong!
+                </div>
+            </div>
+<!--            <div class="col-md-6">
+                <div data-template="admin : exportFileWRK">
                     Booo! Something went wrong!
                 </div>
             </div>
             <div class="col-md-6">
-                <div data-template="admin:saveFileWRKnoJs">
+                <div data-template="admin : saveFileWRKnoJs">
                     Booo! Something went wrong!
                 </div>
             </div>
             <div class="col-md-6">
-                <div data-template="admin:exportFileWRKnoJs">
+                <div data-template="admin : exportFileWRKnoJs">
                     Booo! Something went wrong!
                 </div>
+            </div>
+-->
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <a href="works.html" class="btn btn-info" role="button"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Open works.html</a>
             </div>
         </div>
     </div>
