Add columns for crumbs, rdf et pdf

--- a/admin.html
+++ b/admin.html
@@ -8,9 +8,10 @@
         
         <div>
             <p>            
-                Link to <a href="https://stats.adwmainz.net/index.php?module=CoreHome&amp;action=index&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c#?module=Dashboard&amp;action=embeddedIndex&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c&amp;idDashboard=1">Piwik page</a>.<br/>
-                <a href="reindex.xql">Reindex</a> eXist-db.
+                Link to <a target="_new" href="https://stats.adwmainz.net/index.php?module=CoreHome&amp;action=index&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c#?module=Dashboard&amp;action=embeddedIndex&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c&amp;idDashboard=1">Piwik page</a>.<br/>
+                <a href="reindex.xql" target="_new">Reindex</a> eXist-db.
             </p>
+            <!--        <p><a href="admin-svn.html">SVN Functions</a>.</p> -->
         </div>
         
         <div class="row" data-template="admin:loadListOfWorks" data-template-sort="wid">
@@ -25,7 +26,10 @@
             <table class="table table-hover">
                 <tr>
                     <th>Werk-ID</th>
+                    <th>IIIF Resource</th>
                     <th>Node Index</th>
+                    <th>Crumbtrails</th>
+                    <th> Full PDF</th>
                     <th>HTML Fragments</th>
                     <th>Sphinx Fragments</th>
                     <th>RDF Triples</th>
