Some updates reconciling git repo with live code on refactoring host.

--- a/admin.html
+++ b/admin.html
@@ -29,20 +29,21 @@
                     <th>IIIF Resource</th>
                     <th>Node Index</th>
                     <th>Crumbtrails</th>
-                    <th> Full PDF</th>
+                    <th>Full PDF</th>
                     <th>HTML Fragments</th>
                     <th>Sphinx Fragments</th>
                     <th>RDF Triples</th>
-                    <th>IIIF Resource</th>
                     <th>Routing Information</th>
                 </tr>
                 <tr data-template="templates:each" data-template-from="listOfWorks" data-template-to="currentWork">
                     <td data-template="admin:workString">boing</td>
+                    <td data-template="admin:needsIIIFResourceString">boing</td>
                     <td data-template="admin:needsIndexString">boing</td>
+                    <td data-template="admin:needsCrumbtrails">boing</td>
+                    <td data-template="admin:needsPdfDatei">boing</td>
                     <td data-template="admin:needsHTMLString">boing</td>
                     <td data-template="admin:needsSphinxSnippetsString">boing</td>
                     <td data-template="admin:needsRDFString">boing</td>
-                    <td data-template="admin:needsIIIFResourceString">boing</td>
                     <td data-template="admin:postRoutingString">boing</td>
                 </tr>
             </table>
