Add/change catalogue view production.

--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,6 @@
                 Link to <a target="_new" href="https://stats.adwmainz.net/index.php?module=CoreHome&amp;action=index&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c#?module=Dashboard&amp;action=embeddedIndex&amp;idSite=20&amp;period=day&amp;date=yesterday&amp;ignoreSalt=eb2d7603c7b3f98ce81efb011e901d4c&amp;idDashboard=1">Piwik page</a>.<br/>
                 <a href="reindex.xql" target="_new">Reindex</a> eXist-db.
             </p>
-            <!--        <p><a href="admin-svn.html">SVN Functions</a>.</p> -->
         </div>
         
         <div class="row" data-template="admin:loadListOfWorks" data-template-sort="wid">
@@ -31,6 +30,7 @@
                     <th>Crumbtrails</th>
                     <th>Full PDF</th>
                     <th>HTML Fragments</th>
+                    <th>Catalogue/details Page</th>
                     <th>Sphinx Fragments</th>
                     <th>RDF Triples</th>
                     <th>Routing Information</th>
@@ -42,6 +42,7 @@
                     <td data-template="admin:needsCrumbtrails">boing</td>
                     <td data-template="admin:needsPdfDatei">boing</td>
                     <td data-template="admin:needsHTMLString">boing</td>
+                    <td data-template="admin:needsDetailsString">boing</td>
                     <td data-template="admin:needsSphinxSnippetsString">boing</td>
                     <td data-template="admin:needsRDFString">boing</td>
                     <td data-template="admin:postRoutingString">boing</td>
