--- a/createLists.html
+++ b/createLists.html
@@ -48,7 +48,8 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <a href="works.html" class="btn btn-info" role="button"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Open works.html</a>
+                <a href="works.html" class="btn btn-info" role="button">
+                    <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Open works.html</a>
             </div>
         </div>
     </div>
