Update details and routes administration functions.

--- a/admin.html
+++ b/admin.html
@@ -45,7 +45,7 @@
                     <td data-template="admin:needsDetailsString">boing</td>
                     <td data-template="admin:needsSphinxSnippetsString">boing</td>
                     <td data-template="admin:needsRDFString">boing</td>
-                    <td data-template="admin:postRoutingString">boing</td>
+                    <td data-template="admin:needsRoutingString">boing</td>
                 </tr>
             </table>
             <p>
