Updates to admin stuff (iiif, wp, lemma generation)

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
                 <span data-template="app:workCount">0</span> works found.
             </p>
             <p>
-                <a href="create-lists.html" role="button" class="btn btn-primary">Write/overwrite list of works and save!</a>
+                <a href="create-lists.html" role="button" class="btn btn-primary">Write/overwrite list of works!</a>
                 <!-- TODO: (?) <a href="postRoutes.xql" role="button" class="btn btn-primary">Write all routes to Caddy</a>
                             for now, it suffices to do it individually and with the shell scripts "/etc/caddy/{buildroutes.sh,postroutes.sh}" on the server
                  -->
@@ -41,8 +41,8 @@
                     <td data-template="admin:workString">boing</td>
                     <td data-template="admin:needsIIIFResourceString">boing</td>
                     <td data-template="admin:needsIndexString">boing</td>
-                    <td data-template="admin:needsCrumbtrails">boing</td>
-                    <td data-template="admin:needsPdfDatei">boing</td>
+                    <td data-template="admin:needsCrumbtrailString">boing</td>
+                    <td data-template="admin:needsPdfString">boing</td>
                     <td data-template="admin:needsHTMLString">boing</td>
                     <td data-template="admin:needsDetailsString">boing</td>
                     <td data-template="admin:needsSnippetsString">boing</td>
@@ -85,6 +85,12 @@
 
         <div class="row" data-template="admin:loadListOfLemmata">
             <h2>Lemmata</h2>
+            <p>
+                <a href="create-lists-dict.html" role="button" class="btn btn-primary">Write/overwrite list of dictionary entries!</a>
+                <!-- TODO: (?) <a href="postRoutes.xql" role="button" class="btn btn-primary">Write all routes to Caddy</a>
+                            for now, it suffices to do it individually and with the shell scripts "/etc/caddy/{buildroutes.sh,postroutes.sh}" on the server
+                 -->
+            </p>
             <table class="table table-hover">
                 <tbody>
                     <tr>
