Fix worklist loading for webapp working in existdb.

--- a/works.html
+++ b/works.html
@@ -55,7 +55,7 @@
                     </noscript>
                 </div>
                 <script type="text/javascript">
-                    var works_items = [  <span data-template="app:loadWRKfacets"/> ];
+                    var works_items = <span data-template="app:loadWRKfacets"/>;
                 </script>
             </div>
         </div>
