Updates to data creation (nlp, stats, caddy, webdata-admin).

--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,7 @@
                     <th>Catalogue/details Page</th>
                     <th>Sphinx Fragments</th>
                     <th>RDF Triples</th>
+                    <th>NLP csv file</th>
                     <th>Routing Information</th>
                 </tr>
                 <tr data-template="templates:each" data-template-from="listOfWorks" data-template-to="currentWork">
@@ -47,6 +48,7 @@
                     <td data-template="admin:needsDetailsString">boing</td>
                     <td data-template="admin:needsSnippetsString">boing</td>
                     <td data-template="admin:needsRDFString">boing</td>
+                    <td data-template="admin:needsNLPString">boing</td>
                     <td data-template="admin:needsRoutingString">boing</td>
                 </tr>
             </table>
