Revise admin page.

--- a/admin.html
+++ b/admin.html
@@ -34,9 +34,10 @@
                     <th>HTML Fragments</th>
                     <th>Catalogue/details Page</th>
                     <th>Sphinx Fragments</th>
-                    <th>RDF Triples</th>
                     <th>NLP csv file</th>
+                    <th>Stats file</th>
                     <th>Routing Information</th>
+                    <th>RDF Triples</th>
                 </tr>
                 <tr data-template="templates:each" data-template-from="listOfWorks" data-template-to="currentWork">
                     <td data-template="admin:workString">boing</td>
@@ -47,9 +48,10 @@
                     <td data-template="admin:needsHTMLString">boing</td>
                     <td data-template="admin:needsDetailsString">boing</td>
                     <td data-template="admin:needsSnippetsString">boing</td>
-                    <td data-template="admin:needsRDFString">boing</td>
                     <td data-template="admin:needsNLPString">boing</td>
+                    <td data-template="admin:needsStatsString">boing</td>
                     <td data-template="admin:needsRoutingString">boing</td>
+                    <td data-template="admin:needsRDFString">boing</td>
                 </tr>
             </table>
             <p>
@@ -59,7 +61,7 @@
                 <span data-template="admin:needsTxtCorpusZipString">boing</span>
             </p>
             <p>
-                <span data-template="admin:needsStatsString">boing</span>
+                <span data-template="admin:needsCorpusStatsString">boing</span>
             </p>
         </div>
         
