Revise sphinx snippets generation.

--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
                     <th>Werk-ID</th>
                     <th>IIIF Resource</th>
                     <th>Node Index</th>
-                    <th>Crumbtrails</th>
+                    <!-- th>Crumbtrails</th -->
                     <th>Full PDF</th>
                     <th>HTML Fragments</th>
                     <th>Catalogue/details Page</th>
@@ -43,7 +43,7 @@
                     <td data-template="admin:workString">boing</td>
                     <td data-template="admin:needsIIIFResourceString">boing</td>
                     <td data-template="admin:needsIndexString">boing</td>
-                    <td data-template="admin:needsCrumbtrailString">boing</td>
+                    <!-- td data-template="admin:needsCrumbtrailString">boing</td -->
                     <td data-template="admin:needsPdfString">boing</td>
                     <td data-template="admin:needsHTMLString">boing</td>
                     <td data-template="admin:needsDetailsString">boing</td>
